; ModuleID = '/home/carl/AnghaBench/mimikatz/modules/extr_kull_m_asn1.c_kull_m_asn1_BitStringFromULONG.c'
source_filename = "/home/carl/AnghaBench/mimikatz/modules/extr_kull_m_asn1.c_kull_m_asn1_BitStringFromULONG.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"X\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @kull_m_asn1_BitStringFromULONG(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca [5 x i32], align 16
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = bitcast [5 x i32]* %5 to i8*
  call void @llvm.memset.p0i8.i64(i8* align 16 %6, i8 0, i64 20, i1 false)
  %7 = load i32, i32* %4, align 4
  %8 = call i32 @_byteswap_ulong(i32 %7)
  %9 = getelementptr inbounds [5 x i32], [5 x i32]* %5, i64 0, i64 0
  %10 = getelementptr inbounds i32, i32* %9, i64 1
  store i32 %8, i32* %10, align 4
  %11 = load i32*, i32** %3, align 8
  %12 = getelementptr inbounds [5 x i32], [5 x i32]* %5, i64 0, i64 0
  %13 = call i32 @ber_printf(i32* %11, i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0), i32* %12, i32 20)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memset.p0i8.i64(i8* nocapture writeonly, i8, i64, i1 immarg) #1

declare dso_local i32 @_byteswap_ulong(i32) #2

declare dso_local i32 @ber_printf(i32*, i8*, i32*, i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
